--- a/src/components/laptop.module.css
+++ b/src/components/laptop.module.css
@@ -2,8 +2,19 @@
     text-align: center;
     text-decoration: none;
     color: white;
+    font-size: 25px;
+    font-weight: bold;
+    padding-bottom: 20px;
 }
 
 .link{
     text-decoration: none;
+}
+
+.img{
+    transition: transform .2s;
+}
+
+.img:hover{
+    transform: scale(1.1);
 }
